@@ -1,5 +1,7 @@
 2001-06-12  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/dialog-price-editor.c: fix bug
+
 	* src/gnome/glade/price.glade: new file for old price dialogs
 
 	* src/gnome/dialog-price-editor.c: use libglade
